[package]
name = "fftw-sys"
version = "0.8.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

description = "unsafe wrapper of FFTW3"
repository = "https://github.com/rust-math/fftw"
keywords = ["fftw"]
license-file = "../LICENSE.md"

[features]
default = ["source"]
system = []
source = ["fftw-src"]
intel-mkl = ["intel-mkl-src"]

[dependencies]
libc = "0.2.142"
num-complex = "0.4.3"

# Optional dependencies for features
intel-mkl-src = { git = "https://github.com/10XGenomics/intel-mkl-src", branch = "master", features = ["mkl-static-lp64-seq"], optional = true }
fftw-src = { path = "../fftw-src", version = "0.8.0", optional = true }

[package.metadata.docs.rs]
no-default-features = true
features = ["system"]